feat(driftfx): update to latest version. Close #522
Reverts DriftFX to the master branch, removing performance optimizations
introduced by the wip_performance branch. A better implementation should
be available with the next major upgrade.

Also adds support for JavaFX 11 via the multi-release jar functionality.